[package]
name = "matter-deterministic-math"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deterministic 2D math for Matter.js (WASM)"
repository = "https://github.com/<你>/matter-deterministic-math"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"